Fixed chat so if it becomes full, old messages spill out of the div rather than the new messages.

--- a/public/custom.css
+++ b/public/custom.css
@@ -45,7 +45,9 @@ body {
 }
 #chat-log{
     padding:4px;
-    overflow:visible;
+    overflow:auto;
+    position: absolute;
+    bottom: 9%;
 }
 #canvas-container {
   flex: 1;
